syntax = "proto3";
option go_package = "github.com/braintree/heckler/internal/hecklerpb";
package hecklerpb;

enum Output_format {
  none = 0;
  markdown = 1;
  // XXX 
  tty = 2;
}

service Heckler {
  rpc HecklerStatus (HecklerStatusRequest) returns (HecklerStatusReport) {}
  rpc HecklerNoopRange (HecklerNoopRangeRequest) returns (HecklerNoopRangeReport) {}
  rpc HecklerApply (HecklerApplyRequest) returns (HecklerApplyReport) {}
  rpc HecklerLock (HecklerLockRequest) returns (HecklerLockReport) {}
  rpc HecklerUnlock (HecklerUnlockRequest) returns (HecklerUnlockReport) {}
}

message HecklerStatusRequest {
  string node_set = 1;
  string user = 2;
  repeated string nodes = 3;
}

message HecklerStatusReport {
  map<string,string> node_statuses = 1;
  map<string,string> node_errors = 2;
}

message HecklerNoopRangeRequest {
  string user = 1;
  string begin_rev = 2;
  string end_rev = 3;
  Output_format output_format = 4;
  string node_set = 5;
  repeated string nodes = 6;
}

message HecklerNoopRangeReport {
  string output = 1;
  map<string,string> node_errors = 2;
}

message HecklerApplyRequest {
  string user = 1;
  string rev = 2;
  bool noop = 3;
  bool force = 4;
  bool delta_noop = 5;
  Output_format output_format = 6;
  string node_set = 7;
  repeated string nodes = 8;
}

message HecklerApplyReport {
  string output = 1;
  map<string,string> node_errors = 2;
}

message HecklerLockRequest {
  string user = 1;
  string comment = 2;
  bool force = 3;
  string node_set = 4;
  repeated string nodes = 5;
}

message HecklerLockReport {
  repeated string locked_nodes = 1;
  map<string,string> node_errors = 2;
}

message HecklerUnlockRequest {
  string user = 1;
  bool force = 2;
  string node_set = 3;
  repeated string nodes = 4;
}

message HecklerUnlockReport {
  repeated string unlocked_nodes = 1;
  map<string,string> node_errors = 2;
}
